readme done, few changes, Tyler

--- a/Account_page.html
+++ b/Account_page.html
@@ -119,8 +119,8 @@
   <script>
     $("#logout").click(function () {
       firebase.auth().signOut();
-      alert("logged out");
-      console.log("logged out");
+      alert("Successfully logged out!");
+      console.log("Successfully logged out!");
       window.location.href = './login.html';
     })
   </script>
