--- a/about_us.html
+++ b/about_us.html
@@ -98,8 +98,8 @@
       Over the span of our project, our team completed various sprints and improved tremendously with the help of our
       instructor.
       Every week, she provided us with new resources that allowed us to bring our project up a notch.
-
-      Tiffany Gu, Tyler Lee, Shubhankar Sethi
+      <br>
+       - Tiffany Gu, Tyler Lee, Shubhankar Sethi - 
     </p>
   </div>
 </body>
