--- a/specspage.html
+++ b/specspage.html
@@ -80,7 +80,7 @@
     </nav>
 
     <div id="homeparagraph" style="text-align: center">
-        <h1>Your Specs</h1>
+        <h1>Your Specifications</h1>
         <!-- Displays the recommendations -->
         <div style="margin: 30px">
             <p style="font-size: 30pt">CPU: <span id="stuff">Stuff</span></p>
