--- a/Home_page.html
+++ b/Home_page.html
@@ -17,6 +17,8 @@
 
     <!-- Style sheet for home page -->
     <link rel="stylesheet" href="style/homepage.css">
+    <!--font-->
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 </head>
 
 <body>
