--- a/about_us.html
+++ b/about_us.html
@@ -38,6 +38,8 @@
   </script>
   <!-- The style sheet associated with this page -->
   <link rel="stylesheet" href="style/About_Us_page.css">
+  <!---->
+  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -45,7 +47,7 @@
   <nav class="navbar navbar-dark  indigo darken-2" style="background-color: #2f3e9f; margin: 10px;">
 
   <!-- Navbar brand -->
-  <a class="navbar-brand" href="#">Specsify</a>
+  <a class="navbar-brand" href="#" style="font-family: 'Rubik', sans-serif;">Specsify</a>
 
   <!-- Collapse button -->
   <button class="navbar-toggler third-button" type="button" data-toggle="collapse"
@@ -99,7 +101,7 @@
       instructor.
       Every week, she provided us with new resources that allowed us to bring our project up a notch.
       <br>
-       - Tiffany Gu, Tyler Lee, Shubhankar Sethi - 
+       - Tiffany Gu, Tyler Lee, Shubhankar Sethi -
     </p>
   </div>
 </body>
