--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
   <!-- CSS related to index page -->
   <link rel="stylesheet" href="style/index.css">
+  <!-- Font-->
+  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 </head>
 
 <body>
