--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-firestore.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-    
+
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
@@ -38,6 +38,8 @@
 
     <!-- Style sheet related to login page -->
     <link rel="stylesheet" href="style/login.css">
+    <!-- font-->
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -55,7 +57,7 @@
     </div>
 
     <div id="firebaseui-auth-container"></div>
-    <div id="loader">Loading...</div>
+    <div id="loader" style="text-align: 'center'; font-family: 'Rubik', sans-serif;">Loading</div>
 
     <script>
         // Initialize the FirebaseUI Widget using Firebase.
