--- a/Account_page.html
+++ b/Account_page.html
@@ -42,6 +42,8 @@
   </script>
     <!-- Style sheet associated with account page -->
     <link rel="stylesheet" href="style/Account_page.css">
+    <!-- font-->
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 </head>
 
 <body>
