--- a/help_us.html
+++ b/help_us.html
@@ -37,6 +37,8 @@
     </script>
     <!-- CSS associated with this page -->
     <link rel="stylesheet" href="style/Help_page.css">
+    <!-- FONt-->
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 </head>
 
 <body>
